# CMake-Ep007

./: CMakeLists.txt  README.adoc
dog/include/: dog.hpp
dog/src/: dog.cpp
logger/include/: log.hpp
logger/src/: log.cpp
operations/include/: operations.hpp
operations/src/: operations.cpp
src/: main.cpp
